force-app/main/default/objects/Account_Plan__c/fields/Contractual__c.field-meta.xml
<CustomField>
    <fullName>Contractual__c</fullName>
    <label>Contractual Situation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dual Source</fullName>
            </value>
            <value>
                <fullName>Single Source</fullName>
            </value>
            <value>
                <fullName>No Contracts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>