force-app/main/default/objects/Account_Plan__c/fields/Customer_Buying_Journey__c.field-meta.xml
<CustomField>
    <fullName>Customer_Buying_Journey__c</fullName>
    <label>Customer Buying Journey</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IDN</fullName>
            </value>
            <value>
                <fullName>Value Committee</fullName>
            </value>
            <value>
                <fullName>Supply Chain Committee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>