force-app/main/default/objects/Account_Plan__c/fields/Dollar_value_of_opportunities__c.field-meta.xml
<CustomField>
    <fullName>Dollar_value_of_opportunities__c</fullName>
    <label>Dollar value of opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>