force-app/main/default/objects/Account_Plan__c/fields/Economic_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Economic_Buyer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Economic Buyers</label>
    <length>1</length>
    <type>Text</type>
</CustomField>