force-app/main/default/objects/Account_Plan__c/fields/Influencers__c.field-meta.xml
<CustomField>
    <fullName>Influencers__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Influencers</label>
    <length>1</length>
    <type>Text</type>
</CustomField>