force-app/main/default/objects/Account_Plan__c/fields/Level_of_Influence1__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Influence1__c</fullName>
    <label>Level of Influence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>