force-app/main/default/objects/Account_Plan__c/fields/Name1__c.field-meta.xml
<CustomField>
    <fullName>Name1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>