force-app/main/default/objects/Account_Plan__c/fields/Number_of_opportunities__c.field-meta.xml
<CustomField>
    <fullName>Number_of_opportunities__c</fullName>
    <label>Number of opportunities</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>