force-app/main/default/objects/Account_Plan__c/fields/Size_of_account__c.field-meta.xml
<CustomField>
    <fullName>Size_of_account__c</fullName>
    <label>Size of account</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>