force-app/main/default/objects/Account_Plan__c/fields/Surgeon_Champions__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_Champions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Surgeon Champions</label>
    <length>1</length>
    <type>Text</type>
</CustomField>