force-app/main/default/objects/Account_Plan__c/fields/Type_of_Surgeon__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Surgeon__c</fullName>
    <label>Type of Surgeon</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Friendly</fullName>
            </value>
            <value>
                <fullName>Competitive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>