force-app/main/default/objects/Account_Plan__c/fields/ZB_Team__c.field-meta.xml
<CustomField>
    <fullName>ZB_Team__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ZB Team</label>
    <length>200</length>
    <type>Text</type>
</CustomField>